subprojects {
    apply plugin: 'java'

    // TODO Is this plugin needed?
    apply plugin: 'idea'

    idea {
        module {
            inheritOutputDirs = true
            outputDir = compileJava.destinationDir
            testOutputDir = compileTestJava.destinationDir
        }
    }

    version = '1.0'

    repositories {
        mavenLocal()
        mavenCentral()
    }

    sourceCompatibility = 1.8
    targetCompatibility = 1.8


    ext.libraries = [
            junit        : 'junit:junit:4.11',
            commons_math3: 'org.apache.commons:commons-math3:3.3',
            guava        : 'com.google.guava:guava:18.0',
            slf4j_api    : 'org.slf4j:slf4j-api:1.7.21',
            slf4j_simple : 'org.slf4j:slf4j-simple:1.7.7',
    ]

    dependencies {
        compile group: 'ch.qos.logback', name: 'logback-core', version: '1.1.2'
        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'

        testCompile 'org.assertj:assertj-core:3.5.1'
        testCompile 'org.codehaus.groovy:groovy-all:2.4.7'
        testCompile 'org.spockframework:spock-core:1.1-groovy-2.4-rc-1'

        compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.1.4-2"

    }

}
